<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="General">

        <ListPreference
            android:defaultValue="1"
            android:dialogTitle="@string/account_settings"
            android:summary="@string/account_settings_options"
            android:title="Account Settings" />

        <SwitchPreference
            android:key="dark_mode_enabled"
            android:title="Enable Dark Mode"
            android:defaultValue="false" />
    </PreferenceCategory>

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/limit_data_usage"
        android:summary="@string/wifi_ping"
        android:title="@string/limit_mobile_usage" />

    <ListPreference
        android:defaultValue="1"
        android:dialogTitle="@string/uploads"
        android:entries="@array/pref_uploads"
        android:entryValues="@array/pref_duration"
        android:key="@string/pref_uploads"
        android:summary="@string/specify_network_prefs"
        android:title="Uploads" />


</PreferenceScreen>
